[package]
name = "lightning"
version = "1.0.0"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
glob = "0.3"
json5 = "0.3"
lazy_static = "1.4"
pulldown-cmark = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
syntect = "4.5"
yaml-rust = "0.4"
regex = "1.4"
