[package]
name = "lightning"
version = "1.0.0"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
comrak = "0.11"
glob = "0.3"
html-escape = "0.2"
json5 = "0.3"
lazy_static = "1.4"
lx-json-feed = { path = "./crates/json-feed" }
pulldown-cmark = { version = "0.8", default-features = false }
rayon = "1.5.0"
regex = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
slug = "0.1"
syntect = "4.5"
tera = "1"
uuid = {version = "0.8", features = ["serde", "v5"]}
yaml-rust = "0.4"
