[package]
name = "lightning"
version = "1.0.0"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
json5 = "0.4"
lazy_static = "1.4"
lx-json-feed = { path = "./crates/json-feed" }
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
rayon = "1.5.0"
regex = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
slug = "0.1"
syntect = { version = "4.5", default-features = false, features = ["default-fancy"] }
tera = "1"
uuid = {version = "1.3", features = ["serde", "v5"]}
yaml-rust = "0.4"
